crates/action/tests/probes/derive_both_resource_and_credential.stderr
error: field has both `#[resource]` and `#[credential]` attributes — only one slot kind per field is allowed
  --> tests/probes/derive_both_resource_and_credential.rs:17:5
   |
17 | /     #[resource]
18 | |     #[credential]
19 | |     overloaded: CredentialGuard<FakeCred>,
   | |_________________________________________^

error: cannot find attribute `resource` in this scope
  --> tests/probes/derive_both_resource_and_credential.rs:17:7
   |
17 |     #[resource]
   |       ^^^^^^^^
   |
help: the derive macro `Error` accepts the similarly named `source` attribute
   |
17 -     #[resource]
17 +     #[source]
   |

error: cannot find attribute `credential` in this scope
  --> tests/probes/derive_both_resource_and_credential.rs:18:7
   |
18 |     #[credential]
   |       ^^^^^^^^^^
   |
   = note: `credential` is an attribute that can be used by the derive macros `Credential` and `Resource`, you might be missing a `derive` attribute

error[E0277]: the trait bound `FakeCred: zeroize::DefaultIsZeroes` is not satisfied
  --> tests/probes/derive_both_resource_and_credential.rs:19:17
   |
19 |     overloaded: CredentialGuard<FakeCred>,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `zeroize::DefaultIsZeroes` is not implemented for `FakeCred`
  --> tests/probes/derive_both_resource_and_credential.rs:8:1
   |
 8 | struct FakeCred;
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `zeroize::DefaultIsZeroes`:
             ()
             PhantomPinned
             bool
             char
             f32
             f64
             i128
             i16
           and $N others
   = note: required for `FakeCred` to implement `zeroize::Zeroize`
note: required by a bound in `CredentialGuard`
  --> $WORKSPACE/crates/credential/src/secrets/guard.rs
   |
   | pub struct CredentialGuard<S: Zeroize> {
   |                               ^^^^^^^ required by this bound in `CredentialGuard`
